使用security颁发的token在admin模块登录成功